Testejä, pommin muuttelua, checkstylen lisääminen